MLTL_Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> expression SEMI
Rule 4     expression -> expression AND expression
Rule 5     expression -> NEG expression
Rule 6     expression -> expression OR expression
Rule 7     expression -> expression EQ expression
Rule 8     expression -> expression IMPLY expression
Rule 9     expression -> GLOBAL LBRACK NUMBER RBRACK expression
Rule 10    expression -> GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 11    expression -> FUTURE LBRACK NUMBER RBRACK expression
Rule 12    expression -> FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 13    expression -> expression UNTIL LBRACK NUMBER RBRACK expression
Rule 14    expression -> expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 15    expression -> expression RELEASE LBRACK NUMBER RBRACK expression
Rule 16    expression -> expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 17    expression -> YESTERDAY expression
Rule 18    expression -> expression SINCE expression
Rule 19    expression -> expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 20    expression -> ONCE expression
Rule 21    expression -> ONCE LBRACK NUMBER RBRACK expression
Rule 22    expression -> ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 23    expression -> HISTORICALLY expression
Rule 24    expression -> HISTORICALLY LBRACK NUMBER RBRACK expression
Rule 25    expression -> HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> ATOMIC
Rule 28    expression -> TRUE
Rule 29    expression -> FALSE

Terminals, with rules where they appear

AND                  : 4
ATOMIC               : 27
COMMA                : 10 12 14 16 19 22 25
EQ                   : 7
FALSE                : 29
FUTURE               : 11 12
GLOBAL               : 9 10
HISTORICALLY         : 23 24 25
IMPLY                : 8
LBRACK               : 9 10 11 12 13 14 15 16 19 21 22 24 25
LPAREN               : 26
NEG                  : 5
NUMBER               : 9 10 10 11 12 12 13 14 14 15 16 16 19 19 21 22 22 24 25 25
ONCE                 : 20 21 22
OR                   : 6
RBRACK               : 9 10 11 12 13 14 15 16 19 21 22 24 25
RELEASE              : 15 16
RPAREN               : 26
SEMI                 : 3
SINCE                : 18 19
TRUE                 : 28
UNTIL                : 13 14
YESTERDAY            : 17
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 4 5 6 6 7 7 8 8 9 10 11 12 13 13 14 14 15 15 16 16 17 18 18 19 19 20 21 22 23 24 25 26
program              : 1 0
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . expression SEMI
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . expression SEMI
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    statement                      shift and go to state 14
    expression                     shift and go to state 3

state 2

    (2) program -> statement .

    NEG             reduce using rule 2 (program -> statement .)
    GLOBAL          reduce using rule 2 (program -> statement .)
    FUTURE          reduce using rule 2 (program -> statement .)
    YESTERDAY       reduce using rule 2 (program -> statement .)
    ONCE            reduce using rule 2 (program -> statement .)
    HISTORICALLY    reduce using rule 2 (program -> statement .)
    LPAREN          reduce using rule 2 (program -> statement .)
    ATOMIC          reduce using rule 2 (program -> statement .)
    TRUE            reduce using rule 2 (program -> statement .)
    FALSE           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> expression . SEMI
    (4) expression -> expression . AND expression
    (6) expression -> expression . OR expression
    (7) expression -> expression . EQ expression
    (8) expression -> expression . IMPLY expression
    (13) expression -> expression . UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> expression . UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> expression . RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> expression . RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (18) expression -> expression . SINCE expression
    (19) expression -> expression . SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression

    SEMI            shift and go to state 15
    AND             shift and go to state 16
    OR              shift and go to state 17
    EQ              shift and go to state 18
    IMPLY           shift and go to state 19
    UNTIL           shift and go to state 20
    RELEASE         shift and go to state 21
    SINCE           shift and go to state 22


state 4

    (5) expression -> NEG . expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 23

state 5

    (9) expression -> GLOBAL . LBRACK NUMBER RBRACK expression
    (10) expression -> GLOBAL . LBRACK NUMBER COMMA NUMBER RBRACK expression

    LBRACK          shift and go to state 24


state 6

    (11) expression -> FUTURE . LBRACK NUMBER RBRACK expression
    (12) expression -> FUTURE . LBRACK NUMBER COMMA NUMBER RBRACK expression

    LBRACK          shift and go to state 25


state 7

    (17) expression -> YESTERDAY . expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 26

state 8

    (20) expression -> ONCE . expression
    (21) expression -> ONCE . LBRACK NUMBER RBRACK expression
    (22) expression -> ONCE . LBRACK NUMBER COMMA NUMBER RBRACK expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    LBRACK          shift and go to state 28
    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 27

state 9

    (23) expression -> HISTORICALLY . expression
    (24) expression -> HISTORICALLY . LBRACK NUMBER RBRACK expression
    (25) expression -> HISTORICALLY . LBRACK NUMBER COMMA NUMBER RBRACK expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    LBRACK          shift and go to state 30
    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 29

state 10

    (26) expression -> LPAREN . expression RPAREN
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 31

state 11

    (27) expression -> ATOMIC .

    SEMI            reduce using rule 27 (expression -> ATOMIC .)
    AND             reduce using rule 27 (expression -> ATOMIC .)
    OR              reduce using rule 27 (expression -> ATOMIC .)
    EQ              reduce using rule 27 (expression -> ATOMIC .)
    IMPLY           reduce using rule 27 (expression -> ATOMIC .)
    UNTIL           reduce using rule 27 (expression -> ATOMIC .)
    RELEASE         reduce using rule 27 (expression -> ATOMIC .)
    SINCE           reduce using rule 27 (expression -> ATOMIC .)
    RPAREN          reduce using rule 27 (expression -> ATOMIC .)


state 12

    (28) expression -> TRUE .

    SEMI            reduce using rule 28 (expression -> TRUE .)
    AND             reduce using rule 28 (expression -> TRUE .)
    OR              reduce using rule 28 (expression -> TRUE .)
    EQ              reduce using rule 28 (expression -> TRUE .)
    IMPLY           reduce using rule 28 (expression -> TRUE .)
    UNTIL           reduce using rule 28 (expression -> TRUE .)
    RELEASE         reduce using rule 28 (expression -> TRUE .)
    SINCE           reduce using rule 28 (expression -> TRUE .)
    RPAREN          reduce using rule 28 (expression -> TRUE .)


state 13

    (29) expression -> FALSE .

    SEMI            reduce using rule 29 (expression -> FALSE .)
    AND             reduce using rule 29 (expression -> FALSE .)
    OR              reduce using rule 29 (expression -> FALSE .)
    EQ              reduce using rule 29 (expression -> FALSE .)
    IMPLY           reduce using rule 29 (expression -> FALSE .)
    UNTIL           reduce using rule 29 (expression -> FALSE .)
    RELEASE         reduce using rule 29 (expression -> FALSE .)
    SINCE           reduce using rule 29 (expression -> FALSE .)
    RPAREN          reduce using rule 29 (expression -> FALSE .)


state 14

    (1) program -> program statement .

    NEG             reduce using rule 1 (program -> program statement .)
    GLOBAL          reduce using rule 1 (program -> program statement .)
    FUTURE          reduce using rule 1 (program -> program statement .)
    YESTERDAY       reduce using rule 1 (program -> program statement .)
    ONCE            reduce using rule 1 (program -> program statement .)
    HISTORICALLY    reduce using rule 1 (program -> program statement .)
    LPAREN          reduce using rule 1 (program -> program statement .)
    ATOMIC          reduce using rule 1 (program -> program statement .)
    TRUE            reduce using rule 1 (program -> program statement .)
    FALSE           reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 15

    (3) statement -> expression SEMI .

    NEG             reduce using rule 3 (statement -> expression SEMI .)
    GLOBAL          reduce using rule 3 (statement -> expression SEMI .)
    FUTURE          reduce using rule 3 (statement -> expression SEMI .)
    YESTERDAY       reduce using rule 3 (statement -> expression SEMI .)
    ONCE            reduce using rule 3 (statement -> expression SEMI .)
    HISTORICALLY    reduce using rule 3 (statement -> expression SEMI .)
    LPAREN          reduce using rule 3 (statement -> expression SEMI .)
    ATOMIC          reduce using rule 3 (statement -> expression SEMI .)
    TRUE            reduce using rule 3 (statement -> expression SEMI .)
    FALSE           reduce using rule 3 (statement -> expression SEMI .)
    $end            reduce using rule 3 (statement -> expression SEMI .)


state 16

    (4) expression -> expression AND . expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 32

state 17

    (6) expression -> expression OR . expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 33

state 18

    (7) expression -> expression EQ . expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 34

state 19

    (8) expression -> expression IMPLY . expression
    (4) expression -> . expression AND expression
    (5) expression -> . NEG expression
    (6) expression -> . expression OR expression
    (7) expression -> . expression EQ expression
    (8) expression -> . expression IMPLY expression
    (9) expression -> . GLOBAL LBRACK NUMBER RBRACK expression
    (10) expression -> . GLOBAL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (11) expression -> . FUTURE LBRACK NUMBER RBRACK expression
    (12) expression -> . FUTURE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (13) expression -> . expression UNTIL LBRACK NUMBER RBRACK expression
    (14) expression -> . expression UNTIL LBRACK NUMBER COMMA NUMBER RBRACK expression
    (15) expression -> . expression RELEASE LBRACK NUMBER RBRACK expression
    (16) expression -> . expression RELEASE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (17) expression -> . YESTERDAY expression
    (18) expression -> . expression SINCE expression
    (19) expression -> . expression SINCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (20) expression -> . ONCE expression
    (21) expression -> . ONCE LBRACK NUMBER RBRACK expression
    (22) expression -> . ONCE LBRACK NUMBER COMMA NUMBER RBRACK expression
    (23) expression -> . HISTORICALLY expression
    (24) expression -> . HISTORICALLY LBRACK NUMBER RBRACK expression
    (25) expression -> . HISTORICALLY LBRACK NUMBER COMMA NUMBER RBRACK expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . ATOMIC
    (28) expression -> . TRUE
    (29) expression -> . FALSE

    NEG             shift and go to state 4
    GLOBAL          shift and go to state 5
    FUTURE          shift and go to state 6
    YESTERDAY       shift and go to state 7
    ONCE            shift and go to state 8
    HISTORICALLY    shift and go to state 9
    LPAREN          shift and go to state 10
    ATOMIC          shift and go to state 11
    TRUE            shift and go to state 12
    FALSE           shift and go to state 13

    expression                     shift and go to state 35

state 20

    (13) expression -> expression UNTIL . LBRACK NUMBER RBRACK expression
    (14) expression -> expression UNTIL . LBRACK NUMBER COMMA NUMBER RBRACK expression

    LBRACK          shift and go to state 36


state 21

    (15) expression -> expression RELEASE . LBRACK NUMBER RBRACK expression
    (16) expression -> expression RELEASE . LBRACK NUMBER COMMA NUMBER RBRACK expression

    LBRACK          shift and go to state 37


state 22
